feat(analytics): add privacy-preserving content funnel
Replace raw IP storage with anonymous visitor hashes, record de-duplicated content milestones, and expose session and funnel metrics.